# tool_chromium

./: .gitignore  .gitmodules  .gn  .rustfmt.toml  .vpython3  AUTHORS  BUILD.gn  DEPS  PRESUBMIT.py  PRESUBMIT_test.py  WATCHLISTS
ash/login/resources/: BUILD.gn  ash_login_strings.grd  login_strings.grd
cc/base/: BUILD.gn  features.cc  features.h
chrome/browser/battery/: BUILD.gn
chrome/browser/component_updater/: BUILD.gn  DEPS  component_updater_prefs.cc  dictation_connector_component_installer.cc  dictation_connector_component_installer.h  dictation_connector_component_installer_unittest.cc  platform_runtime_component_installer.cc  platform_runtime_component_installer.h  platform_runtime_component_installer_unittest.cc  private_verification_tokens_installer.cc  private_verification_tokens_installer.h  private_verification_tokens_installer_unittest.cc  registration.cc
chrome/browser/context_hub/: BUILD.gn  context_hub_service.cc  context_hub_service.h  context_hub_service_factory.cc  context_hub_service_factory_unittest.cc  context_hub_service_unittest.cc  features.cc  features.h
chrome/browser/contextual_search/: BUILD.gn  DEPS  chrome_contextual_search_session_tab_validator.cc  chrome_contextual_search_session_tab_validator.h  chrome_contextual_search_session_tab_validator_unittest.cc  contextual_search_service_factory.cc
chrome/browser/custom_handlers/: BUILD.gn
chrome/browser/data_saver/: BUILD.gn
chrome/browser/desktop_to_mobile_promos/: BUILD.gn
chrome/browser/dictation/: BUILD.gn  DEPS  README.md  connector_component_extension.cc  connector_component_extension.h  dictation_browser_test_base.cc  dictation_browser_test_base.h  dictation_context.cc  dictation_context.h  dictation_context_browsertest.cc  dictation_context_fetcher.cc  dictation_context_fetcher.h  dictation_interactive_browser_test_base.cc  dictation_interactive_browser_test_base.h  dictation_keyed_service.cc  dictation_keyed_service.h  dictation_keyed_service_browsertest.cc  dictation_keyed_service_unittest.cc  dictation_multiplexer.cc  dictation_multiplexer.h  dictation_onboarding_browsertest.cc  features.cc  features.h  listener_stream_provider.cc  listener_stream_provider.h  onboarding_manager.cc  onboarding_manager.h  policy_browsertest.cc  session_controller.cc  session_controller.h  session_controller_unittest.cc  session_state.cc  session_state.h  session_ui_delegate.h  session_ui_impl.cc  session_ui_impl.h  session_ui_impl_browsertest.cc  stream_provider.h  stream_provider_delegate.h  target.cc  (+3 more)
chrome/browser/external_protocol/: BUILD.gn  external_protocol_handler.h
chrome/browser/idle/: BUILD.gn
chrome/browser/image_fetcher/: BUILD.gn
chrome/browser/lens/: BUILD.gn  DEPS
chrome/browser/lifetime/: BUILD.gn  application_lifetime_chromeos.cc  browser_close_manager.cc  browser_shutdown.cc  restartability_monitor.cc  restartability_monitor.h  smart_restart_manager.cc  smart_restart_manager_browsertest.cc
chrome/browser/local_network_access/: BUILD.gn  local_network_access_browsertest.cc  local_network_access_workers_browsertest.cc
chrome/browser/net/: BUILD.gn  OWNERS  chrome_mojo_proxy_resolver_mac.cc  chrome_mojo_proxy_resolver_mac.h  chrome_mojo_proxy_resolver_mac_browsertest.cc  errorpage_browsertest.cc  http_auth_cache_status.cc  http_auth_cache_status.h  http_auth_cache_status_unittest.cc  net_error_tab_helper.cc  net_error_tab_helper.h  net_error_tab_helper_unittest.cc  net_export_helper.cc  net_export_helper.h  network_context_configuration_browsertest.cc  network_request_metrics_browsertest.cc  nss_temp_certs_cache_chromeos_unittest.cc  profile_network_context_service_test_utils.cc  profile_network_context_service_test_utils.h  stub_resolver_config_reader.cc  system_network_context_manager.cc  websocket_browsertest.cc
chrome/browser/page_load_metrics/: BUILD.gn  page_load_metrics_browsertest.cc  page_load_metrics_initialize.cc
chrome/browser/paint_preview/: BUILD.gn
chrome/browser/password_manager/: BUILD.gn  chrome_password_manager_client.cc  chrome_password_manager_client.h  chrome_password_manager_client_unittest.cc  multi_profile_credentials_filter_unittest.cc  password_change_browsertest.cc  password_field_classification_model_handler_factory.cc  password_manager_browsertest.cc  password_manager_interactive_uitest.cc  password_manager_util_mac.mm
chrome/browser/pdf/: BUILD.gn  pdf_extension_download_test.cc  pdf_extension_js_test.cc  pdf_extension_test.cc  pdf_extension_util.cc  pdf_help_bubble_handler_factory.cc  pdf_help_bubble_handler_factory.h
chrome/browser/platform_experience/: BUILD.gn  OWNERS  features.cc  prefs.cc  prefs.h
chrome/browser/prefetch/: BUILD.gn
chrome/browser/private_verification_tokens/: BUILD.gn  DEPS  OWNERS  private_verification_tokens_service.cc  private_verification_tokens_service.h  private_verification_tokens_service_browsertest.cc  private_verification_tokens_service_factory.cc  private_verification_tokens_service_factory.h
chrome/browser/readaloud/: BUILD.gn  OWNERS  read_aloud_constants.h  read_aloud_service.cc  read_aloud_service.h  read_aloud_service_factory.cc  read_aloud_service_factory.h  read_aloud_service_factory_unittest.cc  read_aloud_service_unittest.cc
chrome/browser/search/: BUILD.gn  search.cc  search.h  search_browsertest.cc
chrome/updater/: BUILD.gn  activity_impl_posix.cc  activity_impl_posix_unittest.cc  activity_impl_util_linux.cc  activity_impl_util_mac.cc  activity_impl_util_posix.h  auto_run_on_os_upgrade_task.cc  auto_run_on_os_upgrade_task_unittest.cc  certificate_tag.cc  configurator.h  constants.h  event_logger.cc  event_logger_unittest.cc  update_service_impl_impl.cc  update_service_impl_impl_unittest.cc  updater.cc  updater.gni
chrome/updater/app/: app_install_win.cc  app_net_worker.cc  app_net_worker_unittest.cc
components/subscription_eligibility/: BUILD.gn  subscription_eligibility_service.cc  subscription_eligibility_service.h  subscription_eligibility_service_unittest.cc
storage/common/: BUILD.gn
tools/typescript/: BUILD.gn  copy_atomic.py  validate_tsconfig.py
(+19169 files in other folders)
