# Copyright 2025 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("subscription_eligibility") {
  sources = [
    "subscription_eligibility_prefs.cc",
    "subscription_eligibility_prefs.h",
    "subscription_eligibility_service.cc",
    "subscription_eligibility_service.h",
  ]

  public_deps = [
    "//base",
    "//components/keyed_service/core",
  ]

  deps = [
    "//components/pref_registry",
    "//components/prefs",
  ]
}

source_set("unit_tests") {
  testonly = true
  sources = [ "subscription_eligibility_service_unittest.cc" ]
  deps = [
    ":subscription_eligibility",
    "//base",
    "//base/test:test_support",
    "//components/pref_registry",
    "//components/prefs:test_support",
    "//testing/gtest",
  ]
}
