# Copyright 2014 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/rust_static_library.gni")
import("//mojo/public/tools/bindings/mojom.gni")

component("common") {
  output_name = "storage_common"
  sources = [
    "database/database_identifier.cc",
    "database/database_identifier.h",
    "file_system/file_system_info.cc",
    "file_system/file_system_info.h",
    "file_system/file_system_mount_option.h",
    "file_system/file_system_types.h",
    "file_system/file_system_util.cc",
    "file_system/file_system_util.h",
    "quota/padding_key.cc",
    "quota/padding_key.h",
  ]

  configs += [ "//build/config/compiler:wexit_time_destructors" ]

  defines = [ "IS_STORAGE_COMMON_IMPL" ]

  public_deps = [
    "//components/services/filesystem/public/mojom",
    "//services/network/public/mojom",
    "//third_party/blink/public:blink_headers",
    "//third_party/blink/public/common",
  ]

  deps = [
    "//base",
    "//net",
    "//url",
  ]
}

source_set("unittests") {
  testonly = true

  sources = [
    "database/database_identifier_unittest.cc",
    "file_system/file_system_util_unittest.cc",
    "run_all_unittests.cc",
  ]

  deps = [
    ":common",
    "//base/test:test_support",
    "//mojo/core/embedder",
    "//testing/gtest",
    "//third_party/snappy",
    "//third_party/zstd:decompress",
    "//url",
  ]
}

rust_static_library("storage_common_rust") {
  crate_name = "storage_common"
  crate_root = "file_system/file_system_types.rs"
  sources = [ "file_system/file_system_types.rs" ]
  cxx_bindings = [ "file_system/file_system_types.rs" ]
  visibility = [
    "//content/browser:*",
    "//storage/common:*",
  ]
  deps = [ "//third_party/rust/cxx/v1:lib" ]
}
