# Copyright 2026 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Note: Using a custom action to copy the file instead of copy() since GN's
# copy() is not guaranteed to be atomic, which in turn causes problems with
# DevTools esbuild invocations, which while do not depend on this target
# they are broken if an empty package.json file is encountered when they run.
action("copy_package_json") {
  script = "copy_atomic.py"
  inputs = [
    "//build/action_helpers.py",
    "//build/gn_helpers.py",
  ]
  sources = [ "//package.json" ]
  outputs = [ "$root_out_dir/package.json" ]
  args = [
    rebase_path(sources[0], root_build_dir),
    rebase_path(outputs[0], root_build_dir),
  ]
}
