# Copyright 2018 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/chrome_build.gni")
import("//build/config/locales.gni")
import("//chrome/common/features.gni")
import("//tools/grit/grit_rule.gni")

assert(is_chromeos)

grit_strings("login_strings") {
  source = "ash_login_strings.grd"
  defines = chrome_grit_defines
  outputs = [ "grit/ash_login_strings.h" ]
  output_prefix = "ash_login_strings_"
}

grit("resources") {
  source = "login_resources.grd"
  outputs = [
    "grit/login_resources.h",
    "grit/login_resources_map.cc",
    "grit/login_resources_map.h",
    "login_resources_100_percent.pak",
    "login_resources_200_percent.pak",
    "login_resources_300_percent.pak",
  ]
  use_brotli = true
}
