# Copyright 2026 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("context_hub") {
  sources = [
    "context_hub_service.cc",
    "context_hub_service.h",
    "context_hub_service_factory.cc",
    "context_hub_service_factory.h",
    "features.cc",
    "features.h",
  ]

  public_deps = [
    "//base",
    "//chrome/browser/context_hub/memory_bank",
    "//chrome/browser/context_hub/memory_bank:impl",
    "//chrome/browser/personal_context",
    "//chrome/browser/profiles:profile",
    "//components/keyed_service/core",
    "//components/personal_context/core",
    "//components/personal_context/proto:personal_context_proto",
  ]
}

source_set("unit_tests") {
  testonly = true
  sources = [
    "context_hub_service_factory_unittest.cc",
    "context_hub_service_unittest.cc",
  ]
  deps = [
    ":context_hub",
    "//base/test:test_support",
    "//chrome/test:test_support",
    "//components/personal_context/core:test_support",
    "//content/test:test_support",
    "//testing/gmock",
    "//testing/gtest",
  ]
}
