# Copyright 2025 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("custom_handlers") {
  sources = [
    "chrome_protocol_handler_registry_delegate.cc",
    "chrome_protocol_handler_registry_delegate.h",
    "protocol_handler_registry_factory.cc",
    "protocol_handler_registry_factory.h",
  ]

  if (!is_android) {
    sources += [
      "chrome_protocol_handler_navigation_throttle.cc",
      "chrome_protocol_handler_navigation_throttle.h",
    ]
  }

  public_deps = [
    "//base",
    "//chrome/browser:shell_integration",
    "//chrome/browser/profiles:profile",
    "//components/custom_handlers",
    "//components/pref_registry",
  ]

  if (!is_android) {
    public_deps += [ "//chrome/browser/ui/extensions" ]
  }

  deps = [
    "//build:chromeos_buildflags",
    "//chrome/browser/profiles:profile_io_data",
    "//chrome/common:constants",
    "//components/prefs",
    "//components/user_prefs",
    "//content/public/browser",
  ]
}

source_set("unit_tests") {
  testonly = true

  sources = [ "chrome_protocol_handler_registry_unittest.cc" ]

  deps = [
    ":custom_handlers",
    "//base",
    "//base/test:test_support",
    "//chrome/test:test_support",
    "//components/custom_handlers",
    "//components/custom_handlers:test_support",
    "//content/test:test_support",
    "//testing/gtest",
  ]
}

if (!is_android) {
  source_set("browser_tests") {
    testonly = true

    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

    sources = [
      "chrome_protocol_handler_navigation_throttle_browsertest.cc",
      "protocol_handler_registry_browsertest.cc",
    ]

    deps = [
      ":custom_handlers",
      "//base",
      "//chrome/app:command_ids",
      "//chrome/browser/content_settings",
      "//chrome/browser/extensions:test_support",
      "//chrome/browser/profiles:profile",
      "//chrome/browser/renderer_context_menu:test_support",
      "//chrome/browser/ui",
      "//chrome/browser/web_applications",
      "//chrome/browser/web_applications:web_applications_test_support",
      "//chrome/test:test_support",
      "//chrome/test:test_support_ui",
      "//components/custom_handlers",
      "//components/permissions",
      "//content/public/browser",
      "//content/test:test_support",
      "//testing/gtest",
    ]
  }
}
