# Copyright 2023 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("utils") {
  sources = [
    "promos_pref_names.h",
    "promos_utils.cc",
    "promos_utils.h",
  ]

  public_deps = [ "//components/desktop_to_mobile_promos" ]

  deps = [
    "//base",
    "//chrome/browser:browser_process",
    "//chrome/browser/profiles:profile",
    "//chrome/common:constants",
    "//components/feature_engagement/public",
    "//components/pref_registry",
    "//components/prefs",
    "//components/search",
    "//components/segmentation_platform/embedder/default_model",
    "//components/segmentation_platform/public",
    "//components/sync/base",
    "//components/sync/service",
    "//skia",
  ]
}

if (!is_android) {
  source_set("unit_tests") {
    testonly = true

    sources = [ "promos_utils_unittest.cc" ]

    deps = [
      ":utils",
      "//base",
      "//base/test:test_support",
      "//chrome/common:constants",
      "//chrome/test:test_support",
      "//components/desktop_to_mobile_promos",
      "//components/feature_engagement/public",
      "//components/prefs",
      "//components/segmentation_platform/embedder/default_model",
      "//components/sync:test_support",
      "//components/sync_preferences:test_support",
      "//content/test:test_support",
      "//testing/gtest",
    ]
  }
}
