source_set("idle") {
  visibility = [
    "//chrome/browser/*",
    "//chrome/test/*",
  ]

  public = [ "idle_detection_permission_context.h" ]

  sources = [ "idle_detection_permission_context.cc" ]

  public_deps = [
    "//base",
    "//components/permissions",
    "//components/visibility_timer",
  ]

  deps = [
    "//chrome/browser/profiles:profile",
    "//components/content_settings/browser",
    "//content/public/browser",
    "//services/network/public/mojom",
    "//url",
  ]
}

source_set("unit_tests") {
  testonly = true

  sources = [ "idle_detection_permission_context_unittest.cc" ]

  deps = [
    ":idle",
    "//base",
    "//chrome/browser/content_settings:content_settings_factory",
    "//chrome/test:test_support",
    "//components/content_settings/core/browser",
    "//components/permissions",
    "//content/public/browser",
    "//content/test:test_support",
    "//testing/gtest",
  ]
}

if (!is_android) {
  source_set("browser_tests") {
    testonly = true

    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

    sources = [ "idle_browsertest.cc" ]

    deps = [
      ":idle",
      "//base",
      "//chrome/browser/content_settings:content_settings_factory",
      "//chrome/browser/profiles:profile",
      "//chrome/browser/ui",
      "//chrome/browser/user_education",
      "//chrome/test:test_support",
      "//chrome/test:test_support_ui",
      "//components/content_settings/core/browser",
      "//components/content_settings/core/common",
      "//components/permissions",
      "//content/public/browser",
      "//content/public/common",
      "//content/test:browsertest_support",
      "//content/test:test_support",
      "//net:test_support",
      "//testing/gmock",
      "//testing/gtest",
      "//ui/base:test_support",
      "//ui/base/idle",
    ]
  }
}
